--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ body {
 }
 
 #game-options-min {
-  background-color: #252908;
+  background-color: rgba(37, 41, 8, 0.7);
   color: #A5C942;
   display: block;
   position: fixed;
@@ -187,6 +187,7 @@ body {
   right: 0;
   z-index: 1;
   border-radius: 5px;
+  padding: 5px;
 }
 
 #options-min-menu, #close {
@@ -196,4 +197,8 @@ body {
 
 .text-min {
   font-size: 0.8em;
+}
+
+#opt {
+  font-size: 1.2em;
 }
